[package]
name = "rs-service-util"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.8"
tonic = "0.6.2"
etcd-rs = "0.6"
log = "0.4.14"
chrono = "0.4.19"
